# david_seismic

./: .gitignore  gmt_segy.sh  pyproject.toml  read_shot.ipynb
src/david_seismic/: __init__.py
