[project]
name = "david-seismic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zsk4", email = "zachary_katz@mines.edu" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
david-seismic = "david_seismic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
