[project]
name = "david-seismic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zsk4", email = "zachary_katz@mines.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "obspy>=1.4.2",
    "segyio>=1.9.13",
    "xarray[io]>=2025.10.1",
]

[project.scripts]
david-seismic = "david_seismic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
